# local-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  alembic.ini  cleanup_project.ps1  debug_regex.py  docker-compose.postgres.yml  docker-compose.yml  docker-run.sh  final_system_check.py  init_demo.py  install.ps1  local_agent_web.spec  lpb_audit.db  migrate_to_postgres.py  proof_of_memory.py  pyproject.toml  qa_database_stress.py  qa_ollama_load.py  quick_verify_all.sh  requirements.txt  requirements_postgres.txt  requirements_sprint6.txt  requirements_sprint7.txt  run_prod.ps1  setup.py  setup_mobile.ps1  test_advanced_v4.0.py  test_all_platforms.py  test_sprint8_backend.py  test_v4_comprehensive.py  (+3 more)
_development/: PRODUCTION.md  build_all.ps1  build_production.ps1  cross_platform_test.py  diagnostic.py  docker-compose.yml  proof_of_learning.py  proof_of_tools.py  qa_desktop_builder.ps1  qa_edge_cases.py  quick_verify_v4.0.py  quick_verify_v4.py  robustness_test.py  run_qa_suite.py  test_security_hardening.py  test_v4_refinements.py  test_websocket_handshake.py
data/: agent_memory.bak  lpb_audit.bak  sessions.bak
desktop/: desktop_test_guide.md  main.js  package-lock.json  package.json  preload.js
docs/: ARCHITECTURE.md  FAQ.md  LAUNCH_BLOG_POST.md  RELEASE_NOTES_v0.1.0.md  launch_blog.md
examples/: basic_usage.py  getting_started.py  memory_demo.py
frontend/: capacitor.config.json  index.html  package-lock.json  package.json
k8s/: deployment.yaml  (+2 more)
(+113 files in other folders)
