[project]
name = "localagent"
version = "0.6.0"
description = "A lightweight local-first AI agent with Just-in-Time Permission Broker for safe SLM tool execution"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "requests",
    "duckdb",
    "sentence-transformers",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "python-jose[cryptography]",
    "psutil",
    "jinja2",
]

[project.scripts]
local-agent = "localagent.cli:main"

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["localagent*"]
